// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RestaurantList /> renders correctly while empty 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 0.5,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "marginBottom": 12,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 12,
          },
        ]
      }
    >
      Restaurants
    </Text>
  </View>
  <RCTScrollView
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`<RestaurantList /> renders correctly whith data 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "black",
          "borderBottomWidth": 0.5,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "marginBottom": 12,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 12,
          },
        ]
      }
    >
      Restaurants
    </Text>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "description": "This is the restaurant description",
          "id": "1",
          "image_url": "https://picsum.photos/84/84",
          "title": "McDonalds",
        },
        Object {
          "description": "This is the restaurant description 2",
          "id": "2",
          "image_url": "https://picsum.photos/84/84",
          "title": "McDonalds 2",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 18,
                  "marginLeft": 8,
                  "marginRight": 8,
                  "marginTop": 18,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://picsum.photos/50/50",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 6,
                    "height": 84,
                    "width": 84,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexBasis": 0,
                    "flexGrow": 2,
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 24,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                McDonalds
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "gray",
                      "fontSize": 18,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                This is the restaurant description
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 18,
                  "marginLeft": 8,
                  "marginRight": 8,
                  "marginTop": 18,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://picsum.photos/50/50",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 6,
                    "height": 84,
                    "width": 84,
                  },
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "display": "flex",
                    "flexBasis": 0,
                    "flexGrow": 2,
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 24,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                McDonalds 2
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "gray",
                      "fontSize": 18,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                This is the restaurant description 2
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;
